Project

General

Profile

Actions

Bug #24009

closed

[rbd-mirror] bootstrap should not raise -EREMOTEIO if local image still attached

Added by Jason Dillaman almost 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The local image needs to replay from the remote until the local image has processed the demotion event. Otherwise, it's possible for a race where the local image never processes the remote demotion so the local image cannot be promoted cleanly.

http://qa-proxy.ceph.com/teuthology/jdillaman-2018-05-03_17:35:55-rbd-wip-rbd-mirror-policy-distro-basic-smithi/2473753/teuthology.log


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #24084: luminous: [rbd-mirror] bootstrap should not raise -EREMOTEIO if local image still attachedResolvedPrashant DActions
Copied to rbd - Backport #24085: jewel: [rbd-mirror] bootstrap should not raise -EREMOTEIO if local image still attachedClosedActions
Actions #1

Updated by Jason Dillaman almost 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Jason Dillaman almost 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24084: luminous: [rbd-mirror] bootstrap should not raise -EREMOTEIO if local image still attached added
Actions #4

Updated by Nathan Cutler almost 6 years ago

  • Copied to Backport #24085: jewel: [rbd-mirror] bootstrap should not raise -EREMOTEIO if local image still attached added
Actions #5

Updated by Jason Dillaman over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF